--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Solar marketing agency to best services"
     />
     <link rel="apple-touch-icon" href="images/apple-icon-152x152.png" />
     <!--
